# esp_iot_template

./: .gitignore  LICENSE.md  README.md
.github/: CODEOWNERS
.github/workflows/: android.yml  esp32.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  styles.xml
docs/github-self-hosted-runner/: README.md  docker-compose.yml
docs/housing/: all.scad  body.scad  case.scad  lid.scad
docs/pcb/: esp32-s3-cache.lib  esp32-s3-rescue.lib  esp32-s3.pro  esp32-s3.sch  esp32-s3.sch-bak  fp-info-cache  sym-lib-table
esp32/: CHANGELOG.md  CMakeLists.txt  sdkconfig.defaults
esp32/components/bluetooth/: CMakeLists.txt
esp32/components/bluetooth/include/: bluetooth.h  bluetooth_gap.h  bluetooth_gatt.h
esp32/components/bluetooth/src/: bluetooth.c  bluetooth_gap.c
esp32/components/lighting/: CMakeLists.txt
esp32/components/lighting/include/: lighting.h
esp32/components/lighting/src/: lighting.c
esp32/components/lighting/test/: CMakeLists.txt  test_lighting.c
esp32/components/wifi/: CMakeLists.txt  Kconfig.projbuild
esp32/components/wifi/include/: wifi.h
esp32/components/wifi/src/: wifi.c
esp32/host_test/test_sample_host/: CMakeLists.txt
esp32/host_test/test_sample_host/main/: CMakeLists.txt  sample_test.cpp
esp32/main/: main.c
esp32/test/: CMakeLists.txt
esp32/test/main/: CMakeLists.txt  test.c
(+32 files in other folders)
